add tooltips for tools